--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   
     <h1>Todo App</h1>
     
-    <form action="">
+    <form action="/add" method="post">
         <div>
             <label for="'title">Todo Title</label>
             <input type="text" name="title" placeholder="Enter Todo...">
@@ -25,8 +25,12 @@
 
             <span>Not Complete</span>
         {% else %}
-            <span></span>
+            <span>Complete</span>
         {% endif %}
+
+        <a href="/update/{{ todo.id }}">Update</a>
+        <a href="/delete/{{ todo.id }}">Delete</a>
+
     {%endfor%}
 
 </body>
