styled using Semantic UI

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,33 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo app</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css">
+    
 </head>
 <body>
-  
-    <h1>Todo App</h1>
+  <div style="margin-top: 50px" class="ui container" >
+    <h1  class="ui center aligned header">Todo App</h1>
     
-    <form action="/add" method="post">
-        <div>
+    <form class="ui form" action="/add" method="post">
+        <div class="field">
             <label for="'title">Todo Title</label>
             <input type="text" name="title" placeholder="Enter Todo...">
             <br>
-            <button type="submit">Add</button>
         </div>
+        <button class="ui blue button" type="submit">Add</button>
     </form>
     {% for todo in todo_list %}
-        <p>{{ todo.id }} | {{ todo.title }}</p>
+    <div class="ui segment">
+        <p class="ui big header">{{ todo.id }} | {{ todo.title }}</p>
 
         {% if todo.complete == False %}
 
-            <span>Not Complete</span>
+            <span class="ui gray label">Not Complete</span>
         {% else %}
-            <span>Complete</span>
+            <span class="ui green label">Complete</span>
         {% endif %}
 
-        <a href="/update/{{ todo.id }}">Update</a>
-        <a href="/delete/{{ todo.id }}">Delete</a>
-
+        <a class="ui blue button" href="/update/{{ todo.id }}">Update</a>
+        <a class="ui red button" href="/delete/{{ todo.id }}">Delete</a>
+    </div>
     {%endfor%}
-
+  </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.js"></script>
 </html>
